Bug: z-index :/

--- a/src/app/components/edit-form/edit-form.component.scss
+++ b/src/app/components/edit-form/edit-form.component.scss
@@ -82,7 +82,7 @@
                     cursor: pointer;
                 }
                 button {
-                    z-index: 3;
+                    z-index: 1;
                 }
                 fa-icon {
                     font-size: 25px;
